# reffine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  bootstrap  kernel.ptx  main.cpp  students.arrow  students.csv  students.py  test_fn.cu  test_fn.ptx  vector_fn.cu  vector_fn_3_kernel.ptx  vector_kernel.ptx
.github/workflows/: clang-format-check.yml
benchmark/: .gitattributes  .gitignore  load.py  main.cpp  query9.py  requirements.txt  runend.py
benchmark/arrow_data/: bodies.arrow  customer.arrow  edges.arrow  lineitem.arrow  orders.arrow  part.arrow  pr.arrow  rev_edges.arrow  stock_price.arrow  store_sales.arrow  supplier.arrow  supppart.arrow
benchmark/cuda-rapids/: rapids.py
benchmark/include/: bench.h  micro.h  misc.h  temporal.h  tpch.h
benchmark/lib/: .gitattributes  data.py  fake_data.arrow  fake_data.py  gen_data.sh  lineitem.arrow  runend.arrow  students.arrow  students.py
benchmark/lib/tpcds-v3.2.0rc2/tools/: .ctags_updated  call_center.tbl  catalog_page.tbl  catalog_returns.tbl  catalog_sales.tbl  checksum  customer.tbl  customer_address.tbl  customer_demographics.tbl  date_dim.tbl  dbgen_version.tbl  distcomp  dsdgen  dsqgen  household_demographics.tbl  income_band.tbl  inventory.tbl  item.tbl  makefile  mkheader  promotion.tbl  reason.tbl  run.sh  ship_mode.tbl  store.tbl  store_returns.tbl  store_sales.tbl  time_dim.tbl  warehouse.tbl  web_page.tbl  web_returns.tbl  web_sales.tbl  web_site.tbl  y.output  y.tab.c  y.tab.h
benchmark/lib/tpch-v3.0.1/dbgen/: dbgen  qgen  run.sh
benchmark/pandas/: data.py
benchmark/python/: daskbench.py  duckdbbench.py  pandasbench.py  polarsbench.py
benchmark/queries/: query9.py
include/reffine/arrow/: abi.h  base.h  base2.h  defs.h  table.h
include/reffine/base/: log.h  type.h
include/reffine/builder/: reffiner.h  tilder.h
include/reffine/engine/: cuda_engine.h  cudaengine.h  engine.h  memory.h
include/reffine/ir/: expr.h  iter.h  loop.h  node.h  op.h  op_to_loop.h  pred.h  stmt.h
include/reffine/iter/: iter_space.h
include/reffine/pass/: canonpass.h  cemitter.h  clanggen.h  cudagen.h  cudapass.h  irclone.h  iremitter.h  irgen.h  irpass.h  llvmgen.h  loopgen.h  op_to_loop.h  printer.h  printer2.h  readwritepass.h  reffinepass.h  scalarpass.h  symanalysis.h  vinstr.h  visitor.h  z3solver.h
include/reffine/pass/base/: irgen.h  irpass.h  visitor.h
include/reffine/pass/vinstr/: vinstr.h
include/reffine/utils/: utils.h
include/reffine/vinstr/: vinstr.h
python/: CMakeLists.txt  README.md  example.py  example2.py  example3.py
python/bindings/: exec.cpp  ir.cpp  pyreffine.cpp
python/ir/: bindings.cpp
scripts/: gen_vinstr.sh
scripts/lint/: check.sh  format.sh
src/: CMakeLists.txt
src/arrow/: base.cpp
src/base/: type.cpp
src/builder/: reffiner.cpp  tilder.cpp
src/engine/: cuda_engine.cpp  cudaengine.cpp  engine.cpp  memory.cpp
src/ir/: ir.cpp
src/iter/: iter_space.cpp
src/pass/: bufferpass.cpp  canonpass.cpp  cemitter.cpp  clanggen.cpp  cudagen.cpp  cudapass.cpp  irclone.cpp  iremitter.cpp  llvmgen.cpp  loopgen.cpp  mlirgen.cpp  op_to_loop.cpp  printer.cpp  printer2.cpp  readwritepass.cpp  reffinepass.cpp  scalarpass.cpp  symanalysis.cpp  vinstr.cpp  z3solver.cpp
src/pass/vinstr/: external.cpp  internal.cpp  vinstr.cpp
src/utils/: utils.cpp
src/vinstr/: external.cpp  internal.cpp
test/: CMakeLists.txt
test/include/: test_base.h  test_query.h  test_utils.h
test/src/: basic_tests.cpp  test_base.cpp  test_cuda.cpp  test_join.cpp  test_multidim.cpp  test_nested.cpp  test_query.cpp  test_reduce.cpp  test_transform.cpp  test_utils.cpp  test_z3solver.cpp
